--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -141,7 +141,7 @@
   transition: all 0.2s;
 }
 
-.text-center::after {
+.container-fluid .text-center::after {
     display: block;
     height: 2px;
     background-color: #e67e22;
@@ -151,6 +151,13 @@
     margin-top: 15px;
     margin-bottom: 100px;
 }
+
+.table-justify {
+  padding : 0;
+  width: 15%;
+  text-align: justify;
+}
+
 
 nav .nom2:hover {
   color : black;
@@ -1570,9 +1577,12 @@ pre code {
 
 .table {
   width: 100%;
-  max-width: 100%;
+  max-width: 90%;
   margin-bottom: 1rem;
   background-color: transparent;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 0 0 0.05rem rgba(255,255,255, 0.85); 
 }
 
 .table th,
@@ -1619,9 +1629,9 @@ pre code {
 }
 
 .table-hover tbody tr:hover {
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 .table-hover tbody tr {
