--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -118,27 +118,33 @@
     height: 50vh;
     background-attachment: fixed;
 }
- /**border: 1px solid #595959;**/
 
 .cv {
     width: 70%;
-    height: 50vh;
+    height: 75vh;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border: 5px solid grey;
+    border: 4px solid grey;
 }
 
-.test {
+.back {
     background-color: #f4f4f4;
     padding: 80px 0;
-    background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.2)),url(../Code2.png);
+    background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.5)),url(../fond.jpg);
     background-size: cover;
-    height: 100vh;
-    min-height: 600px;
+    height: auto;
     background-position: center;
     background-attachment: scroll;
     color: #fff;
+}
+
+.photo {
+     overflow:hidden;
+    -webkit-border-radius:50px;
+    -moz-border-radius:50px;
+    border-radius:100px;
+  border: 3px solid grey;
 }
 
 .logo {
@@ -168,19 +174,45 @@
   transition: all 0.2s;
 }
 
+.description {
+  display: block;
+  vertical-align: middle;
+  margin-left: 20vh;
+  margin-right: 20vh;
+  text-align: center !important;
+  font-size: 18px;
+  padding: 5vh;
+  background-color: #f9f9f9;
+  
+}
+
+.dl {
+  text-align: center;
+  margin: 2vh;
+}
+
+
+.btnCV {
+  display: block !important;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2vh 3vh 2vh 3vh !important;  
+}
+
 .sous_menus::after {
     display: block;
     height: 2px;
-    background-color: #e67e22;
+    background-color: grey;
     content: " ";
-    width: 200px;
+    width: 29vh;
     margin: 0 auto;
-    margin-top: 15px;
-    margin-bottom: 100px;
+    margin-top: 2vh;
+    margin-bottom: 7vh;
 }
 
 .sous_menus {
   text-align: center !important;
+  margin-top: 4vh;
 }
 
 
@@ -1677,11 +1709,11 @@ pre code {
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .table-hover tbody tr:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.7);
   color: white;
   transition: all 0.1s ease-in-out;
 }
@@ -2310,6 +2342,7 @@ select.form-control-lg:not([size]):not([multiple]),
   line-height: 1.25;
   border-radius: 0.25rem;
   transition: all 0.15s ease-in-out;
+  cursor:pointer;
 }
 
 .btn:focus,
@@ -4695,8 +4728,9 @@ tbody.collapse.show {
   font-size: 0.75rem;
   line-height: 1rem;
   text-align: center;
-  background-color: #e9ecef;
-  border-radius: 0.25rem;
+  background-color: #d9d9d9;
+  border-radius: 0.5rem;
+  border: 0.5px solid grey;
 }
 
 .progress-bar {
