--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -250,7 +250,7 @@
 .back {
   background-color: #f4f4f4;
   padding: 80px 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url(../fond.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url(../Capture.PNG);
   background-size: cover;
   height: auto;
   background-position: center;
